--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       mode: replicated
       replicas: 1
   
-  authentification-service:
+  authentication-service:
     build:
       context: ./../authentication-service
       dockerfile: ./../authentication-service/authentication-service.dockerfile
