feat: Added mail-service to docker-compose.yml

--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -21,6 +21,25 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+  
+  mail-service:
+    build:
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      MAIL_DOMAIN: localhost
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025 # Mailhot standard SMTP port
+      MAIL_ENCRYPTION: none
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      FROM_NAME: "Ilija Krilovic"
+      FROM_ADDRESS: "ilijakrilovic@example.com"
+
 
   authentication-service:
     build:
