--- a/project/k8s/rabbit.yml
+++ b/project/k8s/rabbit.yml
@@ -17,10 +17,10 @@ spec:
         image: "rabbitmq:3.9-alpine"
         resources:
           requests:
-           memory: "64Mi"
-           cpu: "250m"
-          limits:
             memory: "128Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
             cpu: "500m"
         ports:
           - containerPort: 5672
@@ -33,9 +33,9 @@ metadata:
   name: rabbitmq
 spec:
   selector:
-    name: rabbitmq
+    app: rabbitmq
   ports:
     - protocol: TCP
       name: main-port
-      port: 5672  
-      targetPort: 5672 
+      port: 5672
+      targetPort: 5672
